--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,118 @@
+:root {
+  --background-color: #155e75;
+  --highlight-color: #0891b2
+}
+
 body {
-  width: 100%;
-  height: 100%;
+  font-family: 'Barlow Condensed', sans-serif;
+  font-size: 1.25rem;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
 }
 
 main {
   margin: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  width: 100%;
   height: 100%;
 }
 
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2.5rem;
+  background-color: var(--background-color);
+  height: 10%;
+  color: white;
+}
+
+.content {
+  background-color: whitesmoke;
+  padding: 1.5rem;
+  display: flex;
+  height: 70%;
+  align-items: center;
+}
+
+footer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: var(--background-color);
+  height: 20%;
+  color: white;
+}
+
+
+button {
+  -webkit-appearance: none;
+  appearance: none;
+  padding: 0.75rem 1.75rem;
+  border-radius: 5px;
+  border: none;
+  font-family: 'Barlow Condensed', sans-serif;
+  font-size: 1.1rem;
+  font-weight: bold;
+
+}
+
+#searchbar {
+  padding: 0.5rem 1.5rem;
+  width: 300px;
+  border: 1px;
+  border-radius: 5px 0 0 5px;
+
+}
+
+.searchbar-container {
+  display: flex;
+  gap: 0;
+}
+
+.search-weather {
+  border-radius: 0 5px 5px 0;
+  border: none;
+  background-color: var(--highlight-color);
+  color: white;
+}
+
+
+.current-weather {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  padding: 1rem;
+}
+
+h2, h3, p {
+  margin: 0;
+  text-align: center;
+
+}
+
+.current-temperatur {
+  font-size: 4rem;
+  font-weight:bold;
+
+}
+
+footer>div {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+
+}
+
+.footer-title {
+  font-size: 1rem;
+}
+
+.footer-value {
+  font-weight: bold;
+  font-size: 1.75rem;
+}
