--- a/src/style.css
+++ b/src/style.css
@@ -30,9 +30,10 @@ header {
 }
 
 .content {
-  background-color: whitesmoke;
+  background-color: white;
   padding: 1.5rem;
   display: flex;
+  gap: 3rem;
   height: 70%;
   align-items: center;
 }
@@ -86,7 +87,7 @@ button {
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-  padding: 1rem;
+  padding: 2rem 4.5rem;
 }
 
 h2, h3, p {
@@ -99,6 +100,19 @@ h2, h3, p {
   font-size: 4rem;
   font-weight:bold;
 
+}
+
+.forecast {
+  display: flex;
+  gap: 3rem;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+
+}
+
+.forecast>div>p {
+  padding: 1rem;
 }
 
 footer>div {
