--- a/src/style.css
+++ b/src/style.css
@@ -130,3 +130,20 @@ footer>div {
   font-weight: bold;
   font-size: 1.75rem;
 }
+
+.loader {
+  visibility: visible;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border: 5px solid #f3f3f3; /* Light grey */
+  border-top: 5px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }}
